--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
   <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <script type="text/javascript" src="animals.js"></script>
+  <script type="text/javascript" src="assets/javascript/animals.js"></script>
    
 </body>
 
